--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -28,4 +28,11 @@ $neutral-500: #343839;
 $neutral-600: #232627;
 $neutral-700: #141718;
 
-$screen-sm: 37.5rem;
+$dark-100: #dee4ee;
+$dark-200: #8a99af;
+$dark-300: #333a48;
+$dark-400: #1c2434;
+
+$white: #ffffff;
+
+$screen-sm: 37.5rem; // 600px
