--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -14,6 +14,10 @@ html {
 	font-family: $font-inter;
 }
 
+body {
+	overflow-x: clip;
+}
+
 .page__container {
 	max-width: #{$containerWidth + px};
 	@include adaptive-value(
@@ -39,4 +43,8 @@ html {
 	to {
 		transform: rotate(360deg);
 	}
+}
+
+.w-full {
+	width: 100%;
 }
