--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -33,6 +33,9 @@ $dark-200: #8a99af;
 $dark-300: #333a48;
 $dark-400: #1c2434;
 
+$gray-100: #edf2f7;
+$gray-800: #1a202c;
+
 $white: #ffffff;
 
 $screen-sm: 37.5rem; // 600px
