--- a/client/src/components/layouts/DashboardLayout/DashboardLayout.module.scss
+++ b/client/src/components/layouts/DashboardLayout/DashboardLayout.module.scss
@@ -1,7 +1,11 @@
 .main {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: #F1F5F9;
-    overflow-x:clip ;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	background-color: #f1f5f9;
+	overflow-x: clip;
+}
+
+.container {
+	margin: 0.5rem 0;
 }
