Currently working on create product form

--- a/client/src/components/ui/Form/Form.module.scss
+++ b/client/src/components/ui/Form/Form.module.scss
@@ -7,5 +7,11 @@
 
 .description {
 	font-size: 0.8rem;
-    color: $neutral-500;
+	color: $neutral-500;
+}
+
+.label {
+	&--destructive {
+		color: $red-color;
+	}
 }
