--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -38,4 +38,7 @@ $gray-800: #1a202c;
 
 $white: #ffffff;
 
-$screen-sm: 37.5rem; // 600px
+$screen-md: 37.5rem; // 600px
+$screen-xl: 64rem; // 1024px
+$screen-lg: 48rem; // 768px
+$screen-sm: 28rem; // 448px
