--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -49,6 +49,10 @@ body {
 	width: 100%;
 }
 
+.hidden {
+	display: none;
+}
+
 .table-scrollbar {
 	&::-webkit-scrollbar {
 		width: 10px;
@@ -78,5 +82,26 @@ body {
 
 	&::-webkit-scrollbar-track {
 		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	}
+}
+
+.scrollbar {
+	&::-webkit-scrollbar {
+		width: 4px;
+		height: 3px;
+		border-radius: 2px;
+	}
+
+	&::-webkit-scrollbar-track {
+		background-color: $neutral-100;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		background: #5c5c7b;
+		border-radius: 3.125rem;
+	}
+
+	&::-webkit-scrollbar-thumb:hover {
+		background: #7878a3;
 	}
 }
