--- a/client/src/components/ui/Button/Button.module.scss
+++ b/client/src/components/ui/Button/Button.module.scss
@@ -51,6 +51,10 @@
 	min-width: 2.5rem;
 
 	user-select: none;
+
+	position: relative;
+	overflow: hidden;
+
 	&:focus-visible {
 		outline: $neutral-700 auto 2px;
 	}
@@ -58,9 +62,21 @@
 		pointer-events: none;
 		opacity: 0.8;
 	}
+
+	& span.ripple {
+		position: absolute; /* The absolute position we mentioned earlier */
+		border-radius: 50%;
+		transform: scale(0);
+		animation: ripple 600ms linear;
+		background-color: rgba(0, 0, 0, 0.3);
+	}
 	&-default {
 		background-color: $neutral-700;
 		color: $neutral-100;
+
+		& span.ripple {
+			background-color: rgba(255, 255,255, 0.6);
+		}
 		&:focus-visible {
 			outline-offset: 2px;
 		}
@@ -96,5 +112,13 @@
 		&:disabled {
 			opacity: 0.5;
 		}
+	}
+}
+
+
+@keyframes ripple {
+	to {
+		transform: scale(2);
+		opacity: 0;
 	}
 }
