Product color creation functionality was added

--- a/client/src/styles/mixins.scss
+++ b/client/src/styles/mixins.scss
@@ -52,7 +52,9 @@
 	@media screen and (max-width: $screen-lg) {
 		@content;
 	}
-}@mixin screen-xl-max {
+}
+
+@mixin screen-xl-max {
 	@media screen and (max-width: $screen-xl) {
 		@content;
 	}
